--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "caver-js": "^1.8.1",
     "cors": "^2.8.5",
-    "discord": "^0.8.2",
+    "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
