--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
+    "excel4node": "^1.7.2",
     "express": "^4.18.1"
   }
 }
