routing, adding mongoose

--- a/emaple.env
+++ b/emaple.env
@@ -6,5 +6,14 @@ CONTRACT_ADDR = ""
 CLIENT_ID = ""
 CLIENT_SECRET = ""
 REDIECT_URI = ""
+# discord bot info
+
+BOT_TOKEN = ""
+SERVER_ID = ""
+ROLE_ID = ""
+MEMBER_ID = "" # test account
+CHANNEL_ID = ""
+AUTH_URL = ""
+BOT_URL = ""
 #  server info
 PORT = 0000
