--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "discord_node",
   "version": "1.0.0",
   "description": "node server for discord application",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dean",
@@ -15,6 +15,7 @@
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "exceljs": "^4.3.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.4.0"
   }
 }
