--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "dean",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
     "caver-js": "^1.8.1",
     "cors": "^2.8.5",
+    "discord-api-types": "^0.36.1",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "exceljs": "^4.3.0",
